# ExtendedFischerFace

./: CMakeLists.txt
fisherface/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fisherfaces
fisherface/input/: input.csv
src/: filter.cpp  main.cpp
