cmake_minimum_required(VERSION 2.8)
project( Fisherface )
set(OpenCV_DIR ${OpenCV_DIR} /opt/ros/hydro/share/OpenCV/OpenCVConfig.cmake)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( fisherfaces fisherfaces.cpp )
target_link_libraries( fisherfaces ${OpenCV_LIBS} )
